--- a/descri.html
+++ b/descri.html
@@ -25,7 +25,27 @@
         </header>
         
         <section>
-            
+            <section class="journey-way">
+           <h2>Ways to travel with <span>us</span></h2>
+           <p id="journey-explain">The main DC Universe, as well as the alternate realities related to it, began as the first shared universe in comic books and were quickly adapted to other media such as film serials or radio dramas. In subsequent decades, the continuity between all of these media became increasingly complex with certain storylines and events designed to simplify or streamline the more confusing aspects of characters' histories.</p>
+           <div class="travel-ways">
+           <div class="ways-to-travel">
+               <img src="img/image3.jpg" width="70%"alt="bus icon">
+               <h3>Best Animated DC Movie <span>(DC-Animated-Universe)</span></h3><br><br>
+               <p><b><u>Batman: Under The Red Hood</u></b><br><br>It couldn't be anything else. Batman: Under the Red Hood is a dark, unflinching, and faithful tale of Jason Todd's return to life that smartly emphasizes his hatred for The Joker and his lack of understanding towards Batman's no-kill rule. As a whole, the film is an emotional and action-packed roller coaster (with great vocal performances by Bruce Greenwood, Jensen Ackles, and John DiMaggio), but the final few minutes between Batman, Joker, and Jason are what elevate it to pure classic status.</p>
+           </div>
+           <div class="ways-to-travel">
+               <img src="img/image2.jpg" width="70%" alt="plane icon">
+               <h3>Malcom Wheeler-Nicholson<span>DC Comics</span></h3><br><br>
+               <p><b><u>Creator of all DC Comics</u></b><br><br>Malcolm Wheeler-Nicholson was an American pulp magazine writer and entrepreneur who pioneered the American comic book, publishing the first such periodical consisting solely of original material rather than reprints of newspaper comic strips. Long after his departure from the comic book company he founded, Wheeler-Nicholson's National Allied Publications would evolve into DC Comics, one of the U.S.'s two largest comic book publishers along with rival Marvel Comics. He was a 2008 Judges' Choice inductee into the Will Eisner Comic Book Hall of Fame</p>
+           </div>
+           <div class="ways-to-travel">
+               <img src="img/image1.jpg" width="70%" alt="taxi icon">
+               <h3>Best Live-Action DC Movie <span>(DC-Animated-Universe)</span></h3><br><br> 
+               <p>Some fans call Batman Begins the best movie DC has offered so far, but it was The Dark Knight that really got movie goers everywhere talking. The sequel was even darker than its predecessor, and had the added benefit of featuring villains the general public were well-acquainted with. People who don't follow Batman that heavily might not know about Ra's al Ghul, but everyone knows the Joker and Two-Face. And this version of the Joker far exceeded everyone's expectations to the point of stealing the show.</p>
+           </div>
+           </div>
+        </section>
         </section>
     </div>
 </body>
